--- a/DiplomApp/DiplomApp.Models/DiplomApp.Models.csproj
+++ b/DiplomApp/DiplomApp.Models/DiplomApp.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E6E4AAF7-5065-4AD4-A1D6-39986AADF7ED}</ProjectGuid>
+    <ProjectGuid>{4AE61A4D-0CBD-474F-9A6D-10E244F80A55}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DiplomApp.Helpers</RootNamespace>
-    <AssemblyName>DiplomApp.Helpers</AssemblyName>
+    <RootNamespace>DiplomApp.Models</RootNamespace>
+    <AssemblyName>DiplomApp.Models</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,17 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters\CredentialConverters.cs" />
-    <Compile Include="Converters\PointConverters.cs" />
-    <Compile Include="Converters\UserConverters.cs" />
-    <Compile Include="CryptoHelper.cs" />
+    <Compile Include="CredentialsModel.cs" />
+    <Compile Include="PointModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DiplomApp.Models\DiplomApp.Models.csproj">
-      <Project>{4ae61a4d-0cbd-474f-9a6d-10e244f80a55}</Project>
-      <Name>DiplomApp.Models</Name>
-    </ProjectReference>
+    <Compile Include="UserModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
