--- a/DiplomApp/TempHelpTestProject/TempHelpTestProject.csproj
+++ b/DiplomApp/TempHelpTestProject/TempHelpTestProject.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E6E4AAF7-5065-4AD4-A1D6-39986AADF7ED}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{A2CBF1A1-3F7D-4DF2-9B40-5BB6D207F120}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DiplomApp.Helpers</RootNamespace>
-    <AssemblyName>DiplomApp.Helpers</AssemblyName>
+    <RootNamespace>TempHelpTestProject</RootNamespace>
+    <AssemblyName>TempHelpTestProject</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,16 +41,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters\CredentialConverters.cs" />
-    <Compile Include="Converters\PointConverters.cs" />
-    <Compile Include="Converters\UserConverters.cs" />
-    <Compile Include="CryptoHelper.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DiplomApp.Helpers\DiplomApp.Helpers.csproj">
+      <Project>{e6e4aaf7-5065-4ad4-a1d6-39986aadf7ed}</Project>
+      <Name>DiplomApp.Helpers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DiplomApp.Interfaces\DiplomApp.Interfaces.csproj">
+      <Project>{f7787821-fd66-453d-85da-37684af5ce6c}</Project>
+      <Name>DiplomApp.Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DiplomApp.Models\DiplomApp.Models.csproj">
       <Project>{4ae61a4d-0cbd-474f-9a6d-10e244f80a55}</Project>
       <Name>DiplomApp.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DiplomApp.Repo\DiplomApp.Repo.csproj">
+      <Project>{486044c9-942d-427a-a5e2-cca93f466d05}</Project>
+      <Name>DiplomApp.Repo</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DiplomApp.Services\DiplomApp.Services.csproj">
+      <Project>{2ad98dbe-5d06-47ea-b9d9-2def36986660}</Project>
+      <Name>DiplomApp.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DiplomApp\DiplomApp.Web.csproj">
+      <Project>{95ede43a-9126-4841-a281-681d59314ca5}</Project>
+      <Name>DiplomApp.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
