Add register and LogOn pages

--- a/DiplomApp/DiplomApp/DiplomApp.Web.csproj
+++ b/DiplomApp/DiplomApp/DiplomApp.Web.csproj
@@ -100,8 +100,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LogOnModel.cs" />
     <Compile Include="Models\Point.cs" />
     <Compile Include="Models\PointList.cs" />
+    <Compile Include="Models\RegisterModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
