Work with LogOn

--- a/DiplomApp/DiplomApp.Services/DiplomApp.Services.csproj
+++ b/DiplomApp/DiplomApp.Services/DiplomApp.Services.csproj
@@ -39,8 +39,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CredentialsService.cs" />
+    <Compile Include="PointService.cs" />
+    <Compile Include="UserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DiplomApp.Interfaces\DiplomApp.Interfaces.csproj">
+      <Project>{f7787821-fd66-453d-85da-37684af5ce6c}</Project>
+      <Name>DiplomApp.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
