Add some changes

--- a/DiplomApp/DiplomApp/Web.Release.config
+++ b/DiplomApp/DiplomApp/Web.Release.config
@@ -14,6 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="DBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\inetpub\wwwroot\remotem\App_Data\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+  <appSettings>
+    <add key="path" value="C:\inetpub\wwwroot\remotem\bin\DiplomApp.Repo.dll" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
