--- a/DiplomApp/DiplomApp/Web.config
+++ b/DiplomApp/DiplomApp/Web.config
@@ -14,8 +14,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--<add key="path" value="C:\Users\Aleh_Khvoshch\Repo\DiplomApp\DiplomApp.Repo\bin\Debug\DiplomApp.Repo.dll" />-->
     <add key="path" value="C:\Repo\DiplomApp\DiplomApp.Repo\bin\Debug\DiplomApp.Repo.dll" />
+    <add key="aspnet:UseLegacyEncryption" value="true" />
+    <add key="aspnet:UseLegacyMachineKeyEncryption" value="true" />
+    <add key="aspnet:UseLegacyFormsAuthenticationTicketCompatibility" value="true" />
   </appSettings>
   <system.web>
+    <identity impersonate="false" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
@@ -38,7 +42,6 @@
     </profile>
     <membership defaultProvider="CMembershipProvider">
       <providers>
-        <!--<add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />-->
         <add name ="CMembershipProvider" type="DiplomApp.Providers.CMembershipProvider" connectionStringName="DBEntities" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
       </providers>
     </membership>
@@ -69,6 +72,6 @@
   </entityFramework>
   <connectionStrings>
     <!--<add name="DBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\Users\Aleh_Khvoshch\Repo\DiplomApp\DiplomApp\App_Data\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="DBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\Repo\DiplomApp\DiplomApp\App_Data\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />  
-</connectionStrings>
+    <add name="DBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\Repo\DiplomApp\DiplomApp\App_Data\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
