Add Test Project

--- a/DiplomApp/DiplomApp/Web.config
+++ b/DiplomApp/DiplomApp/Web.config
@@ -12,8 +12,8 @@
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="path" value="C:\Users\Aleh_Khvoshch\Repo\DiplomApp\DiplomApp.Repo\bin\Debug\DiplomApp.Repo.dll" />-->
-    <add key="path" value="C:\Repo\DiplomApp\DiplomApp.Repo\bin\Debug\DiplomApp.Repo.dll" />
+    <add key="path" value="C:\Users\Aleh_Khvoshch\Repo\DiplomApp\DiplomApp.Repo\bin\Debug\DiplomApp.Repo.dll" />
+    <!--<add key="path" value="C:\Repo\DiplomApp\DiplomApp.Repo\bin\Debug\DiplomApp.Repo.dll" />-->
     <add key="aspnet:UseLegacyEncryption" value="true" />
     <add key="aspnet:UseLegacyMachineKeyEncryption" value="true" />
     <add key="aspnet:UseLegacyFormsAuthenticationTicketCompatibility" value="true" />
@@ -71,7 +71,7 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <!--<add name="DBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\Users\Aleh_Khvoshch\Repo\DiplomApp\DiplomApp\App_Data\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="DBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\Repo\DiplomApp\DiplomApp\App_Data\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\Users\Aleh_Khvoshch\Repo\DiplomApp\DiplomApp\App_Data\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\Repo\DiplomApp\DiplomApp\App_Data\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
 </configuration>
