Add identity. Add reg

--- a/DiplomApp/DiplomApp.Repo/DiplomApp.Repo.csproj
+++ b/DiplomApp/DiplomApp.Repo/DiplomApp.Repo.csproj
@@ -50,53 +50,53 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Credential.cs">
-      <DependentUpon>DBModel.tt</DependentUpon>
+      <DependentUpon>DBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="CredentialsRepo.cs" />
-    <Compile Include="DBModel.Context.cs">
+    <Compile Include="DBEntities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>DBModel.Context.tt</DependentUpon>
+      <DependentUpon>DBEntities.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="DBModel.cs">
+    <Compile Include="DBEntities.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>DBModel.tt</DependentUpon>
+      <DependentUpon>DBEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="DBModel.Designer.cs">
+    <Compile Include="DBEntities.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>DBModel.edmx</DependentUpon>
+      <DependentUpon>DBEntities.edmx</DependentUpon>
     </Compile>
     <Compile Include="NinjectBinder.cs" />
     <Compile Include="Point.cs">
-      <DependentUpon>DBModel.tt</DependentUpon>
+      <DependentUpon>DBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="PointRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs">
-      <DependentUpon>DBModel.tt</DependentUpon>
+      <DependentUpon>DBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="UserRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
-    <EntityDeploy Include="DBModel.edmx">
+    <EntityDeploy Include="DBEntities.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>DBModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>DBEntities.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="DBModel.Context.tt">
+    <None Include="DBEntities.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DBModel.edmx</DependentUpon>
-      <LastGenOutput>DBModel.Context.cs</LastGenOutput>
+      <DependentUpon>DBEntities.edmx</DependentUpon>
+      <LastGenOutput>DBEntities.Context.cs</LastGenOutput>
     </None>
-    <None Include="DBModel.edmx.diagram">
-      <DependentUpon>DBModel.edmx</DependentUpon>
+    <None Include="DBEntities.edmx.diagram">
+      <DependentUpon>DBEntities.edmx</DependentUpon>
     </None>
-    <None Include="DBModel.tt">
+    <None Include="DBEntities.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DBModel.edmx</DependentUpon>
-      <LastGenOutput>DBModel.cs</LastGenOutput>
+      <DependentUpon>DBEntities.edmx</DependentUpon>
+      <LastGenOutput>DBEntities.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
