Add chart logic

--- a/DiplomApp/DiplomApp/Web.Release.config
+++ b/DiplomApp/DiplomApp/Web.Release.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
   <connectionStrings>
-    <add name="DBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\inetpub\wwwroot\remotem\App_Data\DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    <add name="DBEntities" connectionString="metadata=res://*/DBEntities.csdl|res://*/DBEntities.ssdl|res://*/DBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=c:\inetpub\wwwroot\remotem\App_Data\DB.mdf;integrated security=True;multipleactiveresultsets=True;connect timeout=30;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   <appSettings>
     <add key="path" value="C:\inetpub\wwwroot\remotem\bin\DiplomApp.Repo.dll" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
